cabal-version:      2.4
name:               pluto
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Ponanna P M
maintainer:         ponannapuggera@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Pluto.Logger

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        OverloadedStrings

    build-depends:    
        base ^>=4.14.3.0
        , fast-logger
        , mtl
        , pretty-terminal
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite pluto-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    
        base ^>=4.14.3.0
        , hspec
        , pluto
